# recipes

./: .gitignore  AGENTS.md  BUILD.bazel  LICENSE  arararc.yaml  bakery.yaml  cocktail.schema.yaml  cocktail_yaml_to_tex.py  fake_cocktails_showcase.tex  fake_food_showcase.tex  font.tex  negroni.tex  negroni.yaml  recipe.schema.yaml  recipe_yaml_to_tex.py  recipes.schema.yaml  recipes.yaml  secondi.yaml  test.tex  test_cocktail.tex
.github/workflows/: deploy-pages.yml
bakery/: bakery.yaml
cocktails/: cocktails.yaml
common/arara/rules/: lualatex_git.yaml
common/latex/recipes/: recipe-card.cls  recipes.cls
primi/: primi.yaml
secondi/: secondi.yaml
site/: README.md  index.html  package-lock.json  package.json
site/public/data/: primi.yaml  recipes.yaml
site/scripts/: sync-data.mjs
site/src/: App.tsx  styles.css
site/src/lib/: catalog.ts  recipes.ts
