load("//build/copybara:copybara.bzl", "copybara_workflow")

copybara_workflow(
    name = "recipes",
    excludes = [
    ],
    includes = [
        "arararc.yaml",
        "common/arara/**",
        "common/latex/**",
        "people/mav/recipes/**",
    ],
    moves = {
        "people/mav/recipes": "",
        "EXTERNAL_LICENSE": "LICENSE",
    },
)
