load("//build/bzl:python.bzl", "o_py_binary")
load("//build/copybara:copybara.bzl", "copybara_workflow")

o_py_binary(
    name = "recipe_yaml_to_tex",
    srcs = ["recipe_yaml_to_tex.py"],
    data = [
        "recipe.schema.yaml",
        "recipes.yaml",
    ],
    main = "recipe_yaml_to_tex.py",
    visibility = ["//visibility:public"],
    deps = [
        "@pip//jsonschema",
        "@pip//pyyaml",
    ],
)

o_py_binary(
    name = "cocktail_yaml_to_tex",
    srcs = [
        "cocktail_yaml_to_tex.py",
        "recipe_yaml_to_tex.py",
    ],
    data = [
        "recipe.schema.yaml",
        "recipes.yaml",
    ],
    main = "cocktail_yaml_to_tex.py",
    visibility = ["//visibility:public"],
    deps = [
        "@pip//jsonschema",
        "@pip//pyyaml",
    ],
)

copybara_workflow(
    name = "recipes",
    excludes = [
    ],
    includes = [
        "arararc.yaml",
        "common/arara/**",
        "common/latex/**",
        "people/mav/recipes/**",
    ],
    moves = {
        "people/mav/recipes": "",
        "EXTERNAL_LICENSE": "LICENSE",
    },
)
